[gd_scene load_steps=2 format=3 uid="uid://deu1d71aj3bij"]

[ext_resource type="Script" path="res://objects/ui.gd" id="1_i6hki"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_i6hki")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -105.0
offset_right = 150.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
offset_right = 300.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start
"

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "Resume"

[node name="ResetButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reset
"

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings
"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_reset_button_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_up"]
